# edk2-basetools

./: .flake8  .gitattributes  .gitignore  BasicDevTests.py  ConfirmVersionAndTag.py  MANIFEST.in  pyproject.toml  readme.md  requirements.publisher.txt  requirements.txt  setup.py
.azurepipelines/: Ovmf-Ubuntu-GCC5.yml  Ovmf-Windows-VS2019.yml  azure-pipelines-release.yml  build-ubuntu-gcc5.yml  build-windows-vs2019.yml  ubuntu-test-pr-ci.yml  windows-test-pr-ci.yml
.azurepipelines/templates/: basetools-build-steps.yml  basic-setup-steps.yml  build-publish-whl-steps.yml  build-test-job.yml  flake8-test-steps.yml  markdown-lint-steps.yml  platform-build-run-steps.yml  pr-gate-build-job.yml  pr-gate-steps.yml  spell-test-steps.yml
docs/: coverage.md  publishing.md
edk2basetools/: sitecustomize.py
edk2basetools/AmlToC/: AmlToC.py
edk2basetools/AutoGen/: AutoGen.py  AutoGenWorker.py  BuildEngine.py  DataPipe.py  GenC.py  GenDepex.py  GenMake.py  GenPcdDb.py  GenVar.py  IdfClassObject.py  IncludesAutoGen.py  InfSectionParser.py  ModuleAutoGen.py  ModuleAutoGenHelper.py  PlatformAutoGen.py  StrGather.py  UniClassObject.py  ValidCheckingInfoObject.py  WorkspaceAutoGen.py  __init__.py
edk2basetools/BPDG/: BPDG.py  GenVpd.py  StringTable.py  __init__.py
edk2basetools/Capsule/: GenerateCapsule.py  GenerateWindowsDriver.py  WindowsCapsuleSupportHelper.py
edk2basetools/Common/: BuildToolError.py  BuildVersion.py  DataType.py  EdkLogger.py  Expression.py  GlobalData.py  LongFilePathOs.py  LongFilePathOsPath.py  LongFilePathSupport.py  Misc.py  MultipleWorkspace.py  Parsing.py  RangeExpression.py  StringUtils.py  TargetTxtClassObject.py  ToolDefClassObject.py  VariableAttributes.py  VpdInfoFile.py  __init__.py  caching.py
edk2basetools/CommonDataClass/: CommonClass.py  DataClass.py  Exceptions.py  FdfClass.py  __init__.py
edk2basetools/Ecc/: Check.py  CodeFragment.py  CodeFragmentCollector.py  Configuration.py  Database.py  EccGlobalData.py  EccMain.py  EccToolError.py  Exception.py  FileProfile.py  MetaDataParser.py  ParserWarning.py  __init__.py  c.py
integration_test/: .gitignore  Shared_Keywords.robot  edk2_platform_Ubuntu.robot  edk2_platform_Windows.robot  pip-requirements.txt
(+537 files in other folders)
